
	- new: default per-user file path is now ~/.config/duc/ducrc
	- new: added 'classic' palette for Philesight look
	- new: added -n/--name-sort option to 'duc ui' and 'duc ls'
	- cha: warnings in during indexing now show full path
	- fix: fixed multiline label printing in CGI graph
	- fix: removed PATH_MAX references which broke build on GNU Hurd
	- fix: fixed line stroking for HTML drawing backend

1.4.1	(2016-03-12)

	- new: added --fs-include and --fs-exclude options
	- cha: disabled gui gradients by default. use the --gradient option 
	       for original graph style
	- cha: tooltip now shows actual size, apparent size and count
	- fix: once more fixed cgi parameter decoding
	- fix: fixed handling of filenames with spaces in 'duc cgi'

1.4.0   (2016-02-24)

        - new: added --count option
	- new: added support for windows
	- cha: renamed guigl to gui, only one gui (X11/OpenGL) can now be enabled
	- cha: improved font handling on OpenGL backend
	- cha: changed CGI environment detection to work around bug in Lighttpd

1.3.2	(2015-06-14)

	- fix: added missing file font.c for --enable-opengl

1.3.2	(2015-06-13)

	- fix: rewind dir before drawing 'list' in CGI
	- fix: fix clicking through CGI graph if tooltip is not enabled

1.3	(2015-06-12)

	- new: added SVG and HTML/canvas graph back ends
	- new: added OpenGL/GLFW graph back end for better portability
	- new: added tooltip to CGI, enable with --tooltip option
	- new: duc database is now portable between endianness and
	       architectures for sqlite3 databases
	- new: added --ring-gap option to gui
	- new: added --color option to ui
	- cha: optimized memory usage
	- fix: fixed building on Solaris
	- fix: added better error handling in sqlite3 backend

1.2	(2015-05-11)

	- new: Added --dark option to duc-gui
	- fix: Fixed CGI file system traversing
	- fix: Fixed duc-info output to be consistent with other tools

1.1      (2015-05-09)

	- new: Added support for leveldb database backend