@@ -255,8 +255,8 @@ working directory is listed.</p>
 <dt><code>--full-path</code></dt><dd><p>show full path instead of tree in recursive view</p></dd>
 <dt><code>-g</code>, <code>--graph</code></dt><dd><p>draw graph with relative size for each entry</p></dd>
 <dt><code>-l</code>, <code>--levels=VAL</code></dt><dd><p>traverse up to ARG levels deep [4]</p></dd>
-<dt><code>-R</code>, <code>--recursive</code></dt><dd><p>recursively list subdirectories</p></dd>
 <dt><code>-n</code>, <code>--name-sort</code></dt><dd><p>sort output by name instead of by size</p></dd>
+<dt><code>-R</code>, <code>--recursive</code></dt><dd><p>recursively list subdirectories</p></dd>
 </dl>
 
 
@@ -308,8 +308,10 @@ file name '-'.</p>
 <dt class="flush"><code>--count</code></dt><dd><p>show number of files instead of file size</p></dd>
 <dt><code>--css-url=VAL</code></dt><dd><p>url of CSS style sheet to use instead of default CSS</p></dd>
 <dt><code>-d</code>, <code>--database=VAL</code></dt><dd><p>select database file to use [~/.duc.db]</p></dd>
+<dt><code>--footer=VAL</code></dt><dd><p>select HTML file to include as footer</p></dd>
 <dt><code>--fuzz=VAL</code></dt><dd><p>use radius fuzz factor when drawing graph [0.7]</p></dd>
 <dt><code>--gradient</code></dt><dd><p>draw graph with color gradient</p></dd>
+<dt><code>--header=VAL</code></dt><dd><p>select HTML file to include as header</p></dd>
 <dt><code>-l</code>, <code>--levels=VAL</code></dt><dd><p>draw up to ARG levels deep [4]</p></dd>
 <dt class="flush"><code>--list</code></dt><dd><p>generate table with file list</p></dd>
 <dt><code>--palette=VAL</code></dt><dd><p>select palette. available palettes are: size, rainbow, greyscale, monochrome, classic</p></dd>
@@ -383,9 +385,9 @@ q, escape:       quit
 <dt><code>-a</code>, <code>--apparent</code></dt><dd><p>show apparent instead of actual file size</p></dd>
 <dt><code>-b</code>, <code>--bytes</code></dt><dd><p>show file size in exact number of bytes</p></dd>
 <dt class="flush"><code>--count</code></dt><dd><p>show number of files instead of file size</p></dd>
-<dt><code>--no-color</code></dt><dd><p>do not use colors on terminal output</p></dd>
 <dt><code>-d</code>, <code>--database=VAL</code></dt><dd><p>select database file to use [~/.duc.db]</p></dd>
 <dt><code>-n</code>, <code>--name-sort</code></dt><dd><p>sort output by name instead of by size</p></dd>
+<dt><code>--no-color</code></dt><dd><p>do not use colors on terminal output</p></dd>
 </dl>
 
 
@@ -424,6 +426,8 @@ style is not to your liking you can provide an external CSS url with the
 definition.</p></li>
 <li><p>Add the option --list to generate a table of top sized files and directories
 in the HTML page.</p></li>
+<li><p>The options --header and --footer allow you to insert your own HTML code
+before and after the main </p><div>.</div></li>
 </ul>
 
 
@@ -576,8 +580,8 @@ take the -d/--database option to override the database path.</p>
 <h2 id="AUTHORS">AUTHORS</h2>
 
 <ul>
-<li>Ico Doornekamp <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#100;&#117;&#x63;&#64;&#x7a;&#x65;&#x76;&#x76;&#46;&#x6e;&#108;" data-bare-link="true">&#100;&#117;&#99;&#64;&#122;&#x65;&#118;&#x76;&#46;&#x6e;&#108;</a></li>
-<li>John Stoffel <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x6a;&#x6f;&#x68;&#110;&#64;&#x73;&#x74;&#111;&#102;&#102;&#101;&#x6c;&#46;&#111;&#x72;&#103;" data-bare-link="true">&#106;&#111;&#x68;&#110;&#x40;&#115;&#x74;&#x6f;&#102;&#x66;&#101;&#108;&#46;&#x6f;&#x72;&#103;</a></li>
+<li>Ico Doornekamp <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#100;&#117;&#99;&#64;&#122;&#x65;&#x76;&#118;&#x2e;&#x6e;&#108;" data-bare-link="true">&#x64;&#x75;&#99;&#x40;&#122;&#101;&#x76;&#118;&#46;&#x6e;&#x6c;</a></li>
+<li>John Stoffel <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#x6a;&#111;&#x68;&#x6e;&#64;&#x73;&#116;&#x6f;&#x66;&#102;&#101;&#108;&#46;&#x6f;&#x72;&#x67;" data-bare-link="true">&#106;&#x6f;&#x68;&#110;&#x40;&#x73;&#x74;&#x6f;&#x66;&#x66;&#x65;&#108;&#x2e;&#111;&#x72;&#x67;</a></li>
 </ul>
 
 
